--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://lokeshvaddepally77.github.io/React_Final_Project/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,8 +13,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@reduxjs/toolkit": "^2.5.0",
+    "firebase": "^11.0.2",
+    "lucide-react": "^0.468.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.1"
   },
@@ -26,7 +32,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "gh-pages": "^6.1.0",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^5.4.11"
